# BingoBingo

./: build.gradle  settings.gradle
7zip/: CMakeLists.txt  build.gradle
7zip/src/main/: AndroidManifest.xml
7zip/src/main/cpp/: native-lib.cpp
7zip/src/main/cpp/p7zip/: com_gmself_mg_a7zip_Zip7Utils.h  p7zip.cpp
app/: aliyun-emas-services.json  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_app_main.xml  activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
aria2c/: CMakeLists.txt  build.gradle
aria2c/src/androidTest/java/com/gmself/aria2c/: ExampleInstrumentedTest.java
aria2c/src/main/: AndroidManifest.xml
aria2c/src/main/cpp/aria2/: Android.mk
aria2c/src/main/cpp/aria2/aria2c/: AbstractDiskWriter.cc  AbstractDiskWriter.h  Android.mk.deny  AnonDiskWriterFactory.h  Application.mk  DefaultDiskWriter.cc  DefaultDiskWriter.h  DefaultDiskWriterFactory.cc  DefaultDiskWriterFactory.h  DefaultPieceStorage.cc  DownloadContext.cc  DownloadContext.h  DownloadEngineFactory.cc  DownloadHandlerConstants.cc  Metalink2RequestGroup.cc  MultiDiskAdaptor.cc  MultiDiskAdaptor.h  OptionHandlerFactory.cc  RequestGroupMan.cc  UnknownLengthPieceStorage.cc  WebSocketInteractionCommand.cc  WebSocketSessionMan.cc  XmlParser.cc  bittorrent_helper.cc  bittorrent_helper.h  main.cc  option_processing.cc
aria2c/src/main/cpp/aria2/aria2c-1.18.10/: AbstractDiskWriter.cc  AbstractDiskWriter.h  Android.mk  Android.mk.StaticOpenssl  DefaultDiskWriter.cc  DefaultPieceStorage.cc  DiskWriterFactory.h  DownloadContext.cc  DownloadContext.h  DownloadEngineFactory.cc  Metalink2RequestGroup.cc  MultiDiskAdaptor.cc  MultiDiskAdaptor.h  OptionHandlerFactory.cc  RequestGroupMan.cc  UnknownLengthPieceStorage.cc  WebSocketInteractionCommand.cc  WebSocketSessionMan.cc  XmlParser.cc  bittorrent_helper.cc  bittorrent_helper.h  main.cc  option_processing.cc
aria2c/src/main/cpp/aria2/aria2c-1.18.10/includes/: config.h
aria2c/src/main/cpp/aria2/aria2c/includes/: Makefile  config.h
aria2c/src/main/cpp/aria2/cares/: Android.mk  CMakeLists.txt
aria2c/src/main/cpp/aria2/expat/: Android.mk  CMakeLists.txt
aria2c/src/main/cpp/aria2/wslay/: Android.mk  CMakeLists.txt  Makefile  config.h  config.status  libtool
aria2c/src/main/cpp/aria2/wslay/lib/includes/: Makefile
aria2c/src/main/cpp/aria2/wslay/tests/: Makefile
aria2c/src/test/java/com/gmself/aria2c/: ExampleUnitTest.java
bb_ocr/: build.gradle
bb_ocr/src/main/: AndroidManifest.xml
bb_ocr/src/main/res/anim/: activity_bottom_in.xml  activity_out.xml
bb_ocr/src/main/res/values/: strings.xml
downloadmanager/: build.gradle
downloadmanager/src/main/: AndroidManifest.xml
downloadmanager/src/main/res/layout/: activity_downloadmanager_main.xml  adapter_downloadmanager_rv_item_main.xml
downloadmanager/src/main/res/values/: strings.xml
fontconversion/: build.gradle
fontconversion/src/main/: AndroidManifest.xml
fontconversion/src/main/res/layout/: activity_font_conversion_home.xml
fontconversion/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
ijkplayer/: build.gradle
ijkplayer/src/main/: AndroidManifest.xml
mg_baseLib/: build.gradle
mg_baseModule/: build.gradle
mg_baseModule/src/main/: AndroidManifest.xml
mg_baseModule/src/main/res/drawable/: actionsheet_bottom_selector.xml  actionsheet_middle_down.xml  actionsheet_middle_selector.xml  actionsheet_middle_up.xml  actionsheet_single_green_selector.xml  actionsheet_single_selector.xml  actionsheet_single_selector_buttom.xml  actionsheet_top_selector.xml  button_round_water.xml  copy_ios_btn_one_down.xml  copy_ios_btn_one_down_buttom.xml  copy_ios_btn_one_down_green.xml  copy_ios_btn_one_up.xml  copy_ios_btn_one_up_buttom.xml  copy_ios_btn_one_up_green.xml  copy_ios_btn_three_down.xml  copy_ios_btn_three_up.xml  copy_ios_btn_two_down.xml  copy_ios_btn_two_up.xml
mg_baseModule/src/main/res/layout/: dialog_actionsheet.xml
mg_baseModule/src/main/res/values/: color.xml  strings.xml  styles.xml
mg_transmission/: CMakeLists.txt  build.gradle
mg_transmission/src/androidTest/java/com/example/mg_transmission/: ExampleInstrumentedTest.java
mg_transmission/src/main/: AndroidManifest.xml
mg_transmission/src/main/cpp/transmissionMain/: com_syc_lalala_externalSupport_transmission_TransHandler.h  completion.c  daemon.c  transInterface.c
mg_transmission/src/main/cpp/transmissionMain/libevent/: CMakeLists.txt  bufferevent.c  evutil.c  evutil_rand.c
mg_transmission/src/main/cpp/transmissionMain/libevent/include/: config.h
mg_transmission/src/main/cpp/transmissionMain/libevent/include/WIN32-Code/event2/: event-config.h
mg_transmission/src/main/cpp/transmissionMain/libevent/include/android/event2/: event-config.h
mg_transmission/src/main/cpp/transmissionMain/libtransmission/: CMakeLists.txt  announcer.c  blocklist.c  crypto.c  handshake.c  inout.c  jni_handler.c  lalala.c  libtransmission.vcxproj  peer-io.c  peer-mgr.c  platform-quota.c  platform.c  rpc-server.c  rpcimpl.c  session.c  torrent.c  tr-lpd.c  trevent.c  utils.c  webseed.c
mg_transmission/src/main/cpp/transmissionMain/transmissionIncludes/: README.txt  deamon.h
mg_transmission/src/main/cpp/transmissionMain/transmissionIncludes/libtransmission/: LalalaNative.h  crypto.h  jni_handler.h  lalala.h  torrent.h  transmission.h
mg_transmission/src/main/res/values/: strings.xml
mg_transmission/src/test/java/com/example/mg_transmission/: ExampleUnitTest.java
overall/: build.gradle
overall/src/main/: AndroidManifest.xml
overall/src/main/res/drawable/: background_overall_weather_home.xml
overall/src/main/res/layout/: activity_overall_bingo_home.xml  adapter_overall_rv_item_home.xml  adapter_overall_rv_item_video_home.xml  layout_overall_weather.xml
overall/src/main/res/values/: strings.xml  style.xml
superflyerpage/: build.gradle
superflyerpage/src/main/: AndroidManifest.xml
test/: build.gradle
test/src/main/: AndroidManifest.xml
weather_flutter/: README.md  pubspec.yaml
(+167 files in other folders)
